--- a/index.html
+++ b/index.html
@@ -40,19 +40,23 @@
     }
     function findAllHtmlSpanInOneSection(sectionId) {
         var oSpan = document.querySelectorAll('#' + sectionId + ' span');
+        var result = [];
         for (var i = 0; i < oSpan.length; i++) {
             if (oSpan[i].childNodes[0].nodeValue == 'HTML') {
-                return oSpan[i];
+                result.push(oSpan[i]);
             }
         }
+        return result;
     }
     function findListItem(sectionId, spanCont) {
         var oSpan = document.querySelectorAll('#' + sectionId + ' li span');
+        var result = [];
         for (var i = 0; i < oSpan.length; i++) {
             if (oSpan[i].childNodes[0].nodeValue == spanCont) {
-                return oSpan[i].parentNode;     
+                result.push(oSpan[i].parentNode);     
             }
         }
+        return result;
     }
     function getActiveLinkContent(sectionId) {
          var oA = document.querySelector('#' + sectionId + ' a.active');     
